# rinha-2025-python

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml
src/: buffer.py  db.py  health_checker.py  queue.py  schemas.py  worker.py
